--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
 </head>
 
 <body>
-    <button class="main-btn">New Book!</button>
-    <dialog id="dialog-book">
-        <form id="book-form" method="dialog">
-            <label>Book's title:<input type="text" name="title" autofocus required></label>
-            <label>Author of book:<input type="text" name="author" required></label>
-            <label>Number of pages:<input type="number" name="pages" min="0" max="100000" required></label>
-            <label>Did you read the book?<input type="checkbox" id="check" name="haveRead"></label>
-            <button id="submit-btn" type="submit">Send!</button>
-        </form>
-    </dialog>
-    <div id="book-cards">
-    </div>
+    <header>
+        <h1>Your personal library ^_^</h1>
+    </header>
+    <main>
+        <button class="main-btn">New Book!</button>
+        <dialog id="dialog-book">
+            <form id="book-form" method="dialog">
+                <label>Book's title:<input type="text" name="title" autofocus required></label>
+                <label>Author of book:<input type="text" name="author" required></label>
+                <label>Number of pages:<input type="number" name="pages" min="0" max="100000" required></label>
+                <label>Did you read the book?<input type="checkbox" id="check" name="haveRead"></label>
+                <button id="submit-btn" type="submit">Send!</button>
+            </form>
+        </dialog>
+        <div id="book-cards">
+        </div>
+    </main>
+    <footer>Copyright © Viktor Kolesnik<a>https://github.com/B1aho</a></footer>
 </body>
 
 </html>
