--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="content">
         <header>
-            <h1>Your personal library ^_^</h1>
+            <h1>Your personal library😎</h1>
             <button class="main-btn">New Book!</button>
         </header>
         <main>
@@ -30,9 +30,11 @@
             <div id="book-cards"></div>
         </main>
     </div>
+    <!--
     <footer>
         Copyright © Viktor Kolesnik <a href="https://github.com/B1aho">link</a>
     </footer>
+    -->
 </body>
 
 </html>
