Change content min-height

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 </div>
             </dialog>
             <div id="book-cards"></div>
+            <div id="no-cards"></div>
         </main>
     </div>
 
