Add svg pic for 0 cards

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
                 </div>
             </dialog>
             <div id="book-cards"></div>
-            <div id="no-cards"></div>
+            <div id="no-cards">
+                <img src="./images/Digital-Library.svg" >
+                <p>No books here. Press the button and add your favs books!</p>
+            </div>
         </main>
     </div>
 
