Start image container sizing

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div id="book-cards"></div>
             <div id="no-cards">
                 <img src="./images/Digital-Library.svg" >
-                <p>No books here. Press the button and add your favs books!</p>
+                <p>No books here yet..</p><p>Press the button and add your favs books!</p>
             </div>
         </main>
     </div>
