Change header styles

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div id="book-cards"></div>
             <div id="no-cards">
                 <img src="./images/Digital-Library.svg" >
-                <p>No books here yet..</p><p>Press the button and add your favs books!</p>
+                <p id="first-p">No books here yet..</p><p id="second-p">Press the button and add your favs books!</p>
             </div>
         </main>
     </div>
