Change buttons styles and add colors

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="content">
         <header>
             <h1>Your personal library😎</h1>
-            <button class="main-btn">New Book!</button>
+            <button class="main-btn">+ Add book</button>
         </header>
         <main>
             <dialog id="dialog-book">
