--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         <div id="inputs">
                             <label for="title">Book's title:</label><input type="text" name="title" autofocus required>
                             <label for="author">Author of book:</label><input type="text" name="author" required>
-                            <label for="pages"></label>Number of pages:<input type="number" name="pages" min="0" max="100000" required>
-                            <label for="haveRead"></label>Did you read the book?<input type="checkbox" id="check" name="haveRead">
+                            <label for="pages">Number of pages:</label><input id="pages-input" type="number" name="pages" min="0" max="100000" required>
+                            <label for="haveRead">Did you read the book?</label><input type="checkbox" id="check" name="haveRead">
                         </div>
                         <button id="submit-btn" type="submit">Send!</button>
                     </form>
