Add site icon and done styling

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/book.png">
 </head>
 
 <body>
@@ -34,14 +35,14 @@
             </dialog>
             <div id="book-cards"></div>
             <div id="no-cards">
-                <img src="./images/Digital-Library.svg" >
+                <img alt="Couple of books" src="./images/Digital-Library.svg" >
                 <p id="first-p">No books here yet..</p><p id="second-p">Press the button and add your favs books!</p>
             </div>
         </main>
     </div>
 
     <footer>
-        Copyright © Viktor Kolesnik <a href="https://github.com/B1aho">link</a>
+        Copyright © Viktor Kolesnik <a href="https://github.com/B1aho"><img src="./images/1608908_github_icon.svg" alt="github icon"></a>
     </footer>
 </body>
 
